# kclCppLab1PartA

./: CMakeLists.txt  LICENSE  README.md  Random.h  main.cpp
